remove nav blur on mobile and its fix height bug

--- a/src/sass/_queries.scss
+++ b/src/sass/_queries.scss
@@ -57,6 +57,10 @@
     }
 
     .nav {
+        backdrop-filter: none;
+        -webkit-backdrop-filter: none;
+        height: 100vh;
+
         &-toggle {
             display: block;
             width: 28px;
